Commit 15. Add some test methods. Add handle for input params as file names with products and cards. The format files are describe in README.md. Correct data.class